# cookiecutter-django

./: .editorconfig  AUTHORS  LICENSE  cookiecutter.json  pyproject.toml
{{cookiecutter.slug}}/: .flake8  .pre-commit-config.yaml  AUTHORS  LICENSE  README.md  env.example  manage.py  pyproject.toml
{{cookiecutter.slug}}/requirements/: base.txt
{{cookiecutter.slug}}/{{cookiecutter.slug}}/: asgi.py  urls.py  wsgi.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/core/: admin.py  apps.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/core/static/css/: style.css
{{cookiecutter.slug}}/{{cookiecutter.slug}}/core/templates/: 400.html  403.html  404.html  500.html  about.html  base.html  index.html
{{cookiecutter.slug}}/{{cookiecutter.slug}}/core/templates/partials/: messages.html  navbar.html
{{cookiecutter.slug}}/{{cookiecutter.slug}}/core/templates/partials/forms/: field_errors.html  non_field_errors.html
{{cookiecutter.slug}}/{{cookiecutter.slug}}/members/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/members/auth/: urls.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/members/migrations/: 0001_initial.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/members/static/css/: login.css
{{cookiecutter.slug}}/{{cookiecutter.slug}}/members/templates/members/: login.html  signup.html
{{cookiecutter.slug}}/{{cookiecutter.slug}}/members/templates/members/auth/: login.html  (+6 more)
{{cookiecutter.slug}}/{{cookiecutter.slug}}/settings/: base.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/static/css/: style.css
{{cookiecutter.slug}}/{{cookiecutter.slug}}/static/js/: main.js
{{cookiecutter.slug}}/{{cookiecutter.slug}}/templates/: base.html
{{cookiecutter.slug}}/{{cookiecutter.slug}}/templates/partials/: js.html  messages.html
(+1 files in other folders)
