[project]
name = "{{cookiecutter.project}}"
description = "{{cookiecutter.description}}"
version = "{{cookiecutter.version}}"
authors = [
  "{{cookiecutter.author}} <{{cookiecutter.email}}>",
]
license = "{{cookiecutter.license}}"
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
extend-exclude = "migrations/"
target-version = ["py39"]

[tool.isort]
profile = "black"
extend_skip = "migrations"
known_django = "django"
known_first_party = "{{cookiecutter.slug}}"
sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
