[project]
name = "{{cookiecutter.project}}"
description = "{{cookiecutter.description}}"
version = "{{cookiecutter.version}}"
authors = [
  "{{cookiecutter.author}} <{{cookiecutter.email}}>",
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Documentation = "https://github.com/unknown/demo-project#readme"
Issues = "https://github.com/unknown/demo-project/issues"
Source = "https://github.com/unknown/demo-project"

[tool.black]
extend-exclude = "migrations/"
target-version = ["py39"]

[tool.isort]
profile = "black"
extend_skip = "migrations"
known_django = "django"
known_first_party = "{{cookiecutter.slug}}"
sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
